# Rust-IA-MicroAgents

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  IDENTITY.md  README.md
.playwright-cli/: page-2026-03-15T05-09-38-673Z.yml  page-2026-03-15T05-10-01-557Z.yml
docker/: Dockerfile  ai-microagents.service  ferrum.service
docs/: ARCHITECTURE.md  IN_USECASE_OUT_MIGRATION.md  MASTERPLAN.md  NEXT_LEVEL_PLAN.md  OPERATIONS.md  THREAT_MODEL.md
examples/: local.mock.env
examples/sample_identity/: IDENTITY.md
examples/sample_team_profiles/: integrator.yaml  researcher.yaml  verifier.yaml
migrations/: 0002_supervisor_runtime.sql
migrations/postgres/: 0001_init.sql  0002_supervisor_runtime.sql  0003_redis_bus.sql  0004_bus_envelope_optional_fields.sql  0005_brain_memories.sql
skills/_dev.in/: SKILL.md
skills/_dev.out/: SKILL.md
skills/_dev.usecase/: SKILL.md
skills/agent.help/: SKILL.md
skills/http.fetch/: SKILL.md
skills/market-data/: SKILL.md  market_data.sh
skills/memory.search/: SKILL.md
skills/memory.write/: SKILL.md
skills/multi-source-synthesis/: SKILL.md  multi_source_synthesis.sh
skills/quality.verify/: SKILL.md
skills/reminders.create/: SKILL.md
skills/reminders.list/: SKILL.md
skills/sample.command.echo/: SKILL.md  echo_skill.sh
skills/theory-reasoning/: SKILL.md  theory_reasoning.sh
skills/web-research/: SKILL.md  web_research.sh
src/: app.rs  cli.rs  config.rs  errors.rs  lib.rs  main.rs
src/channel/: mod.rs  telegram.rs
src/dashboard/: api.rs  auth.rs  mod.rs  presenters.rs  routes.rs  sse.rs  views.rs
src/execution/: artifacts.rs  dispatcher.rs  leases.rs  mod.rs  scheduler.rs
src/http/: client.rs  health.rs  mod.rs  server.rs
src/identity/: compiler.rs  loader.rs  mod.rs  schema.rs
src/in/: cli.rs  http.rs  mod.rs  telegram.rs
src/llm/: broker.rs  mod.rs  models.rs  openrouter.rs  response_types.rs
src/memory/: brain.rs  facts.rs  mod.rs  retrieval.rs  store.rs  summary.rs
src/orchestrator/: context.rs  integration.rs  loop.rs  mod.rs  prompt_compiler.rs  response_parser.rs  router.rs
src/planner/: acceptance.rs  dag.rs  decomposition.rs  mod.rs  plan.rs
src/policy/: budgets.rs  mod.rs  permissions.rs  (+1 more)
static/: dashboard.css
templates/: dashboard_conversation.html  dashboard_index.html
tests/: dashboard_runtime.rs  e2e_telegram.rs  failure_paths.rs  perf_real_openrouter.rs  store_persistence.rs
(+39 files in other folders)
