[package]
name = "ferrum"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
description = "Deterministic, lightweight AI orchestration runtime with Telegram-first channel support"
license = "MIT"

[features]
default = []
responses-api = []
embeddings = []

[dependencies]
apalis = "1.0.0-rc.4"
apalis-redis = "1.0.0-rc.4"
askama = "0.14.0"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures = "0.3.31"
humantime = "2.3.0"
jsonschema = "0.37.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
notify = "8.2.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
petgraph = "0.8.3"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
reqwest-middleware = { version = "0.5.1", features = ["json", "rustls"] }
reqwest-retry = "0.9.1"
schemars = { version = "1.1.0", features = ["chrono04", "uuid1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sysinfo = "0.30.13"
teloxide = { version = "0.17.0", default-features = false, features = ["rustls", "webhooks-axum"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
